# TimusOJ

./: .gitignore  Makefile  Readme.md
1000/: CMakeLists.txt
1002/: 1002.c  a.out  test.c
1005/: T1005.cpp
1009/: 1009.c  Makefile
1022/: 1022.c
1100/: 1100.c  1100.cpp  Makefile
1106/: 1106.c  1106.cpp  assembly_list.s  assembly_list_good.s  my_asm_output.s
1131/: 1131.c
1545/: 1545.c  Makefile  a.out  input2  out
1563/: 1563.c  Makefile
1585/: 1585.c  Makefile
1638/: 1638.c
1877/: 1877.c
2001/: 2001.c
2056/: 2056.c
Shen/: .nvimrc
Shen/1.1.10/: exp  main.c
Shen/1.1.12/: exp  input  main.c
Shen/1.1.13/: Makefile  main.c  main_1.c
Shen/1.1.14/: exp  input  main.c
Shen/1.1.15/: Makefile  exp  main.c
Shen/1.1.16/: exp  main.c
Shen/1.1.17/: exp  main.c
Shen/1.1.18/: main.c
Shen/1.1.19/: Makefile  exp  input  main.c
Shen/1.1.20/: Makefile  main.c
Shen/1.1.21/: Makefile  exp  input  main.c  main_1.c
Shen/1.1.22/: Makefile  input  main.c  main_1.c
Shen/1.1.23/: exp  main.c
Shen/1.1.24/: exp  main.c
Shen/1.1.26/: exp  main.c
Shen/1.1.27/: exp  input  main.c
Shen/1.1.28/: main.c
Shen/1.1.29/: Makefile  exp  main.c
Shen/1.1.3/: Makefile  main.c
Shen/1.1.30/: exp  input  main.c
Shen/1.1.4/: exp  (+3 more)
T1001/: CMakeLists.txt  T1001.cpp
T1005/: CMakeLists.txt  input.txt
T1014/: CMakeLists.txt  T1014.cpp
T1131/: T1131.cpp
TimusOJ/: CMakeLists.txt  TimusOJ.cpp
TimusOJ/T1000/: T1000.cpp
TimusOJ/T1005/: T1005.scala
TimusOJ/T1014/: T1014.cpp
TimusOJ/T1131/: CMakeLists.txt
some_practice/: 1.py  functional_p.py
(+26 files in other folders)
